--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Welcome to serviceTech"
+        android:text="Welcome Back "
         android:textAlignment="center"
         android:textColor="@color/teal_700"
         android:textSize="25dp"
