--- a/app/src/main/res/layout/fragment_listings.xml
+++ b/app/src/main/res/layout/fragment_listings.xml
@@ -4,52 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/eventFrag"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/teal_200">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/view_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:text="View Events"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"  />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/event_type_lv"
-        android:layout_marginTop="4dp"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view_event"
-        app:layout_constraintTop_toBottomOf="@+id/view_tv">
-        <EditText
-            android:id="@+id/event_type_v"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Event type"/>
-    </com.google.android.material.textfield.TextInputLayout>
-    <Button
-        android:id="@+id/view_event"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        style="@style/Widget.AppCompat.Button.Colored"
-        app:layout_constraintLeft_toRightOf="@+id/event_type_lv"
-        app:layout_constraintRight_toRightOf= "parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_tv"
-        android:text="View Events"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/events_lst"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
+        android:scrollbars="vertical"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_event"/>
+        app:layout_constraintTop_toBottomOf="@+id/view_tv"
+        tools:listitem="@layout/listing_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
