--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,52 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/schedulefrag"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/design_default_color_background">
 
     <TextView
         android:id="@+id/view_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
+        android:text="View Appointments"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:text="View Events"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"  />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/event_type_lv"
-        android:layout_marginTop="4dp"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/view_event"
         app:layout_constraintTop_toBottomOf="@+id/view_tv">
+
         <EditText
             android:id="@+id/event_type_v"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Event type"/>
+            android:layout_height="45dp"
+            android:hint="Event type" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/view_event"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:text="Get Appointments"
         app:layout_constraintLeft_toRightOf="@+id/event_type_lv"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_tv"
-        android:text="View Events"/>
+        app:layout_constraintTop_toBottomOf="@+id/view_tv" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/events_lst"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:scrollbars="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_event"/>
+        app:layout_constraintTop_toBottomOf="@+id/view_event" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
