--- a/app/src/main/res/layout/recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/recycler_view_item_layout.xml
@@ -26,26 +26,28 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place_tv" />
+
     <Button
         android:id="@+id/edit_event_b"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="0dp"
         android:minWidth="0dp"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:minHeight="0dp"
+        android:text="Pick"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/delete_event_b"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_tv"
-        android:text="Edit"/>
+        app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
+
     <Button
         android:id="@+id/delete_event_b"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="0dp"
         android:minWidth="0dp"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:minHeight="0dp"
+        android:text="Remove"
         app:layout_constraintLeft_toRightOf="@+id/edit_event_b"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_tv"
-        android:text="Delete"/>
+        app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
 </androidx.constraintlayout.widget.ConstraintLayout >
