--- a/app/src/main/res/layout/view_event_item.xml
+++ b/app/src/main/res/layout/view_event_item.xml
@@ -15,12 +15,21 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
+        android:id="@+id/serviceType_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name_tv"
+        />
+
+    <TextView
         android:id="@+id/place_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_tv" />
+        app:layout_constraintTop_toBottomOf="@+id/serviceType_tv" />
     <TextView
         android:id="@+id/start_time_tv"
         android:layout_width="wrap_content"
@@ -28,26 +37,28 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place_tv" />
+
     <Button
         android:id="@+id/edit_event_b"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="0dp"
         android:minWidth="0dp"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:minHeight="0dp"
+        android:text="Update"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/delete_event_b"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_tv"
-        android:text="Edit"/>
+        app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
+
     <Button
         android:id="@+id/delete_event_b"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="0dp"
         android:minWidth="0dp"
-        style="@style/Widget.AppCompat.Button.Colored"
+        android:minHeight="0dp"
+        android:text="Attend"
         app:layout_constraintLeft_toRightOf="@+id/edit_event_b"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_time_tv"
-        android:text="Delete"/>
+        app:layout_constraintTop_toBottomOf="@+id/start_time_tv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
